Removed new String() so that strings can be interned, removed toString() on strings, converted new Boolean to Boolean.valueOf() to use interned value.
git-svn-id: https://svn.apache.org/repos/asf/lenya/trunk@565858 13f79535-47bb-0310-9956-ffa450edef68